--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,184 @@
 
+/**
+ * Basic
+ */
+
 .cutomjs {
+    padding: 20px 25px;
     min-width: 500px;
     min-height: 500px;
-    padding: 25px;
+    color: #4A4A4A;
+    font: Arial, Helvetica, sans-serif;
+    font-size: 14px;
 }
 
-textarea {
-    width: 100%;
-    height: 400px;
+a,
+a:hover,
+.blue-text,
+.blue-text:hover {
+    color: #0F14F3;
+}
+
+.red-text,
+.red-text:hover {
+    color: #f10000;
+}
+
+a {
+    text-decoration: underline;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+.pure-g {
+    padding: 5px 0;
+}
+
+
+/**
+ * Host row (up)
+ */
+
+.host {
+    
+}
+
+.host__name select {
+    min-width: 220px;
+}
+
+.host__name a {
     font-size: 12px;
-    color: #454545;
 }
 
-label {    
-    line-height: 37px;    
-    font-size: 80%;
+.host__enable {
+    text-align: right;
+    line-height: 39px;
+    font-size: 12px;
 }
 
-input[type="checkbox"] {
+.host__enable input {
     position: relative;
-    top: 2px;
+    bottom: -2px;
+    margin-left: 2px;
 }
 
-em {
-    font-style: italic;
-    color: #0f14f3;
+
+/**
+ * Versions row (bellow)
+ */
+
+.versions {
+    line-height: 39px;
 }
 
-.text-right {
+.versions__title strong {
+    
+}
+
+.versions__control {
     text-align: right;
 }
+
+.versions__control a {
+    font-size: 12px;
+    margin-right: 10px;
+}
+
+.versions__control button {
+    font-size: 16px;
+    color: #a1a1a1;
+}
+
+.versions__delete {
+    
+}
+
+
+/**
+ * Source row  (middle)
+ */
+
+.source {
+    
+}
+
+.source__editor {
+    
+}
+
+
+/**
+ * Controls row (bottom)
+ */
+
+.controls {
+    
+}
+
+.controls__save {
+    
+}
+
+.controls__include {
+}
+    
+
+/**
+ * Font icons
+ */
+
+ @font-face {
+  font-family: 'customjs';
+  src: url('../font/customjs.svg?96127482#customjs') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'customjs';
+    src: url('../font/customjs.svg?96127482#customjs') format('svg');
+  }
+}
+*/
+ 
+ [class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "customjs";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+ 
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+ 
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+     
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+ 
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+ 
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+ 
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+ 
+.icon-plus:before { content: '\e802'; } /* '' */
+.icon-minus:before { content: '\e803'; } /* '' */
+.icon-left-open:before { content: '\e800'; } /* '' */
+.icon-right-open:before { content: '\e801'; } /* '' */
