--- a/css/style.css
+++ b/css/style.css
@@ -4,40 +4,42 @@
  */
 
 .cutomjs {
-    padding: 15px 25px;
-    min-width: 500px;
-    min-height: 500px;
-    color: #4A4A4A;
-    font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+  overflow: hidden;
+  padding: 12px 24px;
+  width: 548px;
+  height: 570px;
+  color: #4A4A4A;
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 a,
 a:hover,
 .blue-text,
 .blue-text:hover {
-    color: #0F14F3;
+  color: #0F14F3;
 }
 
 .red-text,
 .red-text:hover {
-    color: #f10000;
+  color: #f10000;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .is-hidden {
-    opacity: 0;
+  display: none;
 }
 
 .pure-g {
-    padding: 10px 0;
+  padding: 10px 0;
 }
 
 
@@ -49,24 +51,23 @@ a:hover {
 }
 
 .host__name select {
-    min-width: 220px;
+  min-width: 220px;
 }
 
 .host__name a {
-    margin-left: 5px;
-    font-size: 12px;
+  margin-left: 5px;
+  font-size: 12px;
 }
 
 .host__enable {
-    text-align: right;
-    font-size: 12px;
-    line-height: 34px;
+  text-align: right;
+  line-height: 34px;
 }
 
 .host__enable input {
-    position: relative;
-    bottom: -2px;
-    margin-left: 2px;
+  position: relative;
+  bottom: -2px;
+  margin-left: 2px;
 }
 
 
@@ -75,16 +76,50 @@ a:hover {
  */
 
 .include {
-    text-align: right;
+  text-align: right;
 }
 
 .include__body {
-    color: #999;
-    line-height: 35px;
+  color: #999;
+  font-size: 12px;
+  line-height: 35px;
 }
 
 .include__body select {
-    min-width: 110px;
+  min-width: 110px;
+}
+
+.include__popbox {
+}
+
+.include__popbox__body {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 10;
+  margin: -150px 0 0 -250px;
+  width: 500px;
+  height: 300px;
+}
+
+.include__popbox__body textarea {    
+  width: 100%;
+  height: 100%;
+  color: #777;
+  font-size: 12px;
+  line-height: 180%;    
+  resize: none;
+}
+
+.include__popbox__screenmask {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  width: 100%;
+  height: 100%;
+  background-color: #ddd;
+  opacity: 0.4;
 }
 
 
@@ -96,13 +131,13 @@ a:hover {
 }
 
 .source__editor {
-    border: 1px solid #EBEBEB;
+  border: 1px solid #EBEBEB;
 }
 
 .source__editor pre {
-    margin: 0;
-    min-height: 380px;
-    width: 100%;
+  margin: 0;
+  min-height: 380px;
+  width: 100%;
 }
 
 /**
@@ -112,74 +147,39 @@ a:hover {
 .controls {
 }
 
-.controls__save-version input {
-    font-size: 18px;
+.controls__save-revision input {
+  font-size: 18px;
 }
 
-.controls__save-version em {
-    margin-left: 10px;
+.controls__save-revision em {
+  margin-left: 10px;
 }
 
-.controls__versions {
-    line-height: 39px;
-    text-align: right;
+.controls__revisions {
+  text-align: right;
+  line-height: 39px;
 }
 
-.controls__versions a {
-    margin-right: 10px;
+.controls__revisions a {
+  margin-right: 10px;
 }
-    
+
 
 /**
  * Font icons
  */
 
- @font-face {
+@font-face {
   font-weight: normal;
   font-style: normal;
   font-family: 'customjs';
   src: url('../font/customjs.svg?96127482#customjs') format('svg');
 }
-/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
-/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
-/*
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-  @font-face {
-    font-family: 'customjs';
-    src: url('../font/customjs.svg?96127482#customjs') format('svg');
-  }
-}
-*/
  
- [class^="icon-"]:before, [class*=" icon-"]:before {
- 
+[class^="icon-"]:before, [class*=" icon-"]:before {
   display: inline-block;
-  margin-right: .2em;
- 
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  margin-left: .2em;
-  width: 1em;
-  text-align: center;
-  text-decoration: inherit;
-  text-transform: none;
-  font-weight: normal;
-  font-style: normal;
-  /* opacity: .8; */
- 
-  /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   font-family: "customjs";
-     
-  /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
-  speak: none;
- 
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
- 
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
 .icon-plus:before { content: '\e802'; } /* '' */
