--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ a:hover {
  * Host row (up)
  */
 
-.host {   
+.host {
 }
 
 .host__name select {
@@ -120,12 +120,12 @@ a:hover {
   height: 300px;
 }
 
-.include__popbox__body textarea {    
+.include__popbox__body textarea {
   width: 100%;
   height: 100%;
   color: #777;
   font-size: 12px;
-  line-height: 180%;    
+  line-height: 180%;
   resize: none;
 }
 
@@ -160,21 +160,41 @@ a:hover {
 }
 
 /**
- * Controls row (bottom)
+ * Controls
  */
 
-.controls {
-}
+.controls { }
 
-.controls__save input {
+.controls__save,
+.controls__reset {
   margin-right: 10px;
   font-size: 18px;
 }
 
-.controls__remove-draft {
-  
+.controls__remove-draft { }
+
+/**
+ * Donate
+ */
+.donate {
+    text-align: right;
 }
 
+.donate img {
+    position: absolute;
+}
+
+.donate__button {
+    background: rgb(28, 184, 65); /* this is a green */
+    color: #fff;
+    font-size: 18px;
+}
+
+.donate-form {
+    width: 0;
+    height: 0;
+    overflow: hidden;
+}
 
 
 /**
